commonLib: add UriUtils
Signed-off-by: Simon Bennetts <psiinon@gmail.com>