@@ -32,6 +32,8 @@ import net.htmlparser.jericho.Element;
 import net.htmlparser.jericho.Source;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.zaproxy.addon.commonlib.UriUtils;
+import org.zaproxy.addon.commonlib.ZapUriException;
 
 /**
  * This class is to paser the returned html pages and extract other dirs and files from them
@@ -103,7 +105,8 @@ public class HTMLparse extends Thread {
                                 if (attr != null) {
                                     // creates a full qulaifed domian name, based on the page we
                                     // have just tested
-                                    URL tempURL = new URL(work.getWork(), attr.getValue());
+                                    URL tempURL =
+                                            work.getWork().toURI().resolve(attr.getValue()).toURL();
 
                                     String urlString = tempURL.getPath();
                                     // check it is not already there and the link is from the same
@@ -126,7 +129,9 @@ public class HTMLparse extends Thread {
                                     }
                                 }
 
-                            } catch (MalformedURLException e) {
+                            } catch (MalformedURLException
+                                    | URISyntaxException
+                                    | IllegalArgumentException e) {
                                 LOGGER.debug("Bad URL", e);
                             }
                         }
@@ -180,7 +185,7 @@ public class HTMLparse extends Thread {
                                         // ports
                                         WorkUnit workUnit =
                                                 new WorkUnit(
-                                                        new URL(
+                                                        UriUtils.buildUrl(
                                                                 work.getWork().getProtocol(),
                                                                 work.getWork().getHost(),
                                                                 work.getWork().getPort(),
@@ -199,7 +204,7 @@ public class HTMLparse extends Thread {
                                             // workUnit.getWork().toString() + " to the work
                                             // queue");
                                         }
-                                    } catch (MalformedURLException ex) {
+                                    } catch (ZapUriException ex) {
                                         LOGGER.debug("Bad URL", ex);
                                     } catch (InterruptedException ex) {
                                         LOGGER.debug(ex);
